DevOCL/src/objects/CLQ_Facility_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Days_of_Operation__c</fullName>
        <label>Days of Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Facility Schedule object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Funding_Source__c</fullName>
        <inlineHelpText>Funding source for the program for this specific schedule.</inlineHelpText>
        <label>Funding Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_HOO_Time_1_End__c</fullName>
        <globalPicklist>CLQ_Time_Intervals</globalPicklist>
        <label>Time 1 End</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_HOO_Time_1_Start__c</fullName>
        <description>User can set 2 ranges for start/end time for each schedule.</description>
        <globalPicklist>CLQ_Time_Intervals</globalPicklist>
        <inlineHelpText>Hours of Operation start time for range 1.</inlineHelpText>
        <label>Time 1 Start</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_HOO_Time_2_End__c</fullName>
        <globalPicklist>CLQ_Time_Intervals</globalPicklist>
        <label>Time 2 End</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_HOO_Time_2_Start__c</fullName>
        <globalPicklist>CLQ_Time_Intervals</globalPicklist>
        <label>Time 2 Start</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Facility Schedules</relationshipLabel>
        <relationshipName>Facility_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Transaction</label>
        <referenceTo>CLQ_Program_Transaction__c</referenceTo>
        <relationshipLabel>Facility Schedules</relationshipLabel>
        <relationshipName>Facility_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipLabel>Facility Schedules</relationshipLabel>
        <relationshipName>Facility_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Months_of_Operation__c</fullName>
        <inlineHelpText>Pick one or more months; if selected &quot;Year Round&quot; or &quot;Summer Only&quot;, no other months can be selected.</inlineHelpText>
        <label>Months of Operation</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Only</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Facility Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Facility Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>